# ReviveIt

./: README.md  README_zh.md  docker-compose.yml
.github/workflows/: coveralls.yml  django.yml  docker-image.yml
backend/: .dockerignore  .env  .gitignore  .pg_service.conf  .pgpass  .pylintrc  Dockerfile  README.md  makefile  manage.py  nginx.conf  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.sh  test_setting.py
backend/api/: admin.py  apps.py  messages.py  middleware.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/api/fixtures/: initial_data.json
backend/api/migrations/: 0001_initial.py  0002_item_tags_alter_user_balance.py
backend/api/templates/: notifications_unread.html
backend/items/: messages.py  serializers.py  tests.py  views.py
backend/items/fixtures/: initial_data.json
backend/reviveit_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/reviveit_server/: asgi.py  settings.py  urls.py
client/: main.js  package.json
docs/: readme.md
frontend/: .dockerignore  .eslintrc-auto-import.json  Dockerfile  README.md  auto-imports.d.ts  components.d.ts  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  run.sh  server.js  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts  webpack.config.js
frontend/src/: .dockerignore  App.vue  main.js  main.ts
server/: Dockerfile  requirements.txt
server/items/: admin.py  models.py  serializers.py  urls.py  views.py
server/reviveit_server/: settings.py  urls.py  wsgi.py
(+50 files in other folders)
